# dockx

./: README.es.md  README.md
.github/workflows/: merge.yml  release.yml
data/: Application.css  dock.gresource.xml  dock.gschema.xml
scripts/: prefetch_tradingview_stock_logos.sh
src/: ItemManager.vala  meson.build
src/MediaSystem/: MediaMonitor.vala  NowPlayingItem.vala
src/SystemWidlets/: ClipboardWidletItem.vala  CpuTempWidletItem.vala  CpuWidletItem.vala  GpuWidletItem.vala  HarddiskWidletItem.vala  RamWidletItem.vala  StockWidletItem.vala  TrashWidletItem.vala  WidletAlertController.vala
src/WeatherSystem/: WeatherWidletItem.vala
src/WorkspaceSystem/: DynamicWorkspaceItem.vala  IconGroup.vala  WorkspaceSystem.vala
