sources = [
    'Application.vala',
    'BaseIconGroup.vala',
    'BaseItem.vala',
    'BottomMargin.vala',
    'ContainerItem.vala',
    'ItemManager.vala',
    'MainWindow.vala',
    'MediaSystem' / 'MediaMonitor.vala',
    'MediaSystem' / 'NowPlayingItem.vala',
    'RenderNodeWalker.vala',
    'AppSystem' / 'App.vala',
    'AppSystem' / 'AppSystem.vala',
    'AppSystem' / 'Launcher.vala',
    'AppSystem' / 'PoofPopover.vala',
    'AppSystem' / 'Background' / 'BackgroundApp.vala',
    'AppSystem' / 'Background' / 'BackgroundAppRow.vala',
    'AppSystem' / 'Background' / 'BackgroundItem.vala',
    'AppSystem' / 'Background' / 'BackgroundMonitor.vala',
    'DBus' / 'AppCenter.vala',
    'DBus' / 'GalaDBus.vala',
    'DBus' / 'ItemInterface.vala',
    'DBus' / 'ShellKeyGrabber.vala',
    'DBus' / 'SwitcherooControl.vala',
    'DBus' / 'Unity.vala',
    'DBus' / 'WindowDragManager.vala',
    'WindowSystem' / 'DesktopIntegration.vala',
    'WindowSystem' / 'Window.vala',
    'WindowSystem' / 'WindowSystem.vala',
    'SystemWidlets' / 'CpuWidletItem.vala',
    'SystemWidlets' / 'WidletAlertController.vala',
    'SystemWidlets' / 'CpuTempWidletItem.vala',
    'SystemWidlets' / 'GpuWidletItem.vala',
    'SystemWidlets' / 'HarddiskWidletItem.vala',
    'SystemWidlets' / 'RamWidletItem.vala',
    'SystemWidlets' / 'StockWidletItem.vala',
    'SystemWidlets' / 'TrashWidletItem.vala',
    'WeatherSystem' / 'WeatherWidletItem.vala',
    'WorkspaceSystem' / 'DynamicWorkspaceItem.vala',
    'WorkspaceSystem' / 'IconGroup.vala',
    'WorkspaceSystem' / 'Workspace.vala',
    'WorkspaceSystem' / 'WorkspaceItem.vala',
    'WorkspaceSystem' / 'WorkspaceSystem.vala'
]

executable(
    meson.project_name(),
    gresource,
    sources,
    dependencies: dependencies,
    install: true
)
